CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ds-lib-bench CXX)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
else()
    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
    if(COMPILER_SUPPORTS_CXX0X)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
    endif()
endif()
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -g")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
FILE(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})

SET(INCLUDE include/)
FILE(GLOB SOURCE_FILES src/*.cc)
INCLUDE_DIRECTORIES(${INCLUDE})
ADD_EXECUTABLE(stbench ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(stbench ds)
